2006-02-15  Jim Evins  <evins@snaught.com>

	* src/label-object.c:
		Changed default shadow offsets.
	* src/view-box.c: (gl_view_box_new):
		Simplified gl_view_box_new() so that is does not duplicate code
		in update_canvas_item_from_object_cb().

2006-02-07  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
		Fixed color groups of color combos.
	* src/color.h:
		Added default shadow color.
	* src/object-editor.c: (gl_object_editor_construct_color_combo):
		Added shadow color group.

2006-02-06  Jim Evins  <evins@snaught.com>

	* src/object-editor-shadow-page.c:
		Forgot to add this file.
	* src/view-box.c: (gl_view_box_new),
	(update_canvas_item_from_object_cb), (update_editor_from_label_cb):
		Update limits on shadow offset spinbuttons.

2006-01-19  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c: (gl_merge_evolution_get_key_list):
		Initialize key_list to NULL.
	* data/glade/object-editor.glade:
	* src/Makefile.am:
	* src/color.c:
	* src/color.h:
	* src/label-object.c:
	* src/label-object.h:
	* src/object-editor-fill-page.c:
	* src/object-editor-private.h:
	* src/object-editor.c:
	* src/object-editor.h:
	* src/xml-label.c:
		Created infrastructure for shadow support.
	* src/view-box.c:
	* src/print.c:
		Initial shadow support in box object only.
	
2006-01-05  Jim Evins  <evins@snaught.com>

	* src/merge-properties-dialog.c: (src_changed_cb):
		Be extra paranoid before calling strcmp().
	* src/merge.c: (gl_merge_set_src):
		Don't make (merge == NULL) a critical error.

2005-12-22  Jim Evins  <evins@snaught.com>

	* src/glabels-batch.c: (main):
		Compile warning free with gcc 4.0.

2005-12-21  Jim Evins  <evins@snaught.com>

	* glabels.spec.in:
		Updated example RPM spec file.
	
2005-12-21  Jim Evins  <evins@snaught.com>

	* NEWS:
	* configure.in:
		Preparation for 2.1.2.
	
2005-12-20  Jim Evins  <evins@snaught.com>

	* src/Makefile.am:
		Define unique G_LOG_DOMAIN for glabels.